common.gradle:  simplify